fixed spacing on form

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -430,7 +430,10 @@ nav.shift ul li a:hover:after {
 }
 
 .main-form h2 {
-	padding: 1rem;
+	padding-top: 1.5rem;
+	padding-bottom: .85rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
 	font-size: 1.5rem;
 	color: $secondary-color;
 }
@@ -455,7 +458,7 @@ nav.shift ul li a:hover:after {
 }
 
 .main-form .btn-container {
-	height: 70px;
+	height: 90px;
 }
 
 .main-form button {
